# rust-tidy

./: .editorconfig  .gitignore  .shellcheckrc  CONTRIBUTING.md  LICENSE  README.md  import_linter.py  pyproject.toml  ruff.toml  toml_dep_sorter.py
src/rust_tidy/: __init__.py  __main__.py  cli.py  diag.py  lint_imports.py  sort_toml.py
tests/: conftest.py  test_diag.py  test_lint_imports.py  test_sort_toml.py
tools/: format.sh  lint.sh  test.sh
