[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rust-tidy"
version = "0.1.0"
description = "Tidy Rust projects: sort Cargo.toml dependencies and lint module-level use ordering."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Han Damin", email = "miniex@daminstudio.net" }]
keywords = ["rust", "cargo", "lint", "format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
rust-tidy = "rust_tidy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Repository = "https://github.com/miniex/rust-tidy"

[tool.hatch.build.targets.wheel]
packages = ["src/rust_tidy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
